# a_trade_calendar

./: .gitignore  LICENSE  README.md  calendar_util.py  pyproject.toml
a_trade_calendar/: __init__.py  a_trade_calendar.csv  calendar_util.py  make_manifest.py  manifest.json  updater.py
doc/: readme.md  readme2.md
